django-app/k8s/service.yaml
# k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-app
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
